[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name= "day01"
test = false
bench = false
path="day01/src/main.rs"

[[bin]]
name= "day02"
test = false
bench = false
path="day02/src/main.rs"

[[bin]]
name= "day03"
test = false
bench = false
path="day03/src/main.rs"

[[bin]]
name= "day04"
test = false
bench = false
path="day04/src/main.rs"

[[bin]]
name= "day05"
test = false
bench = false
path="day05/src/main.rs"

[[bin]]
name= "day06"
test = false
bench = false
path="day06/src/main.rs"

[[bin]]
name= "day07"
test = false
bench = false
path="day07/src/main.rs"

[workspace]

members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07"
]

[dependencies]
regex = "1"
